[gd_scene load_steps=3 format=2]

[ext_resource path="res://ble/hub_control_gui.tscn" type="PackedScene" id=2]
[ext_resource path="res://devices/train/train_control_gui.gd" type="Script" id=3]

[node name="TrainControlGui" type="VBoxContainer"]
anchor_bottom = 1.0
margin_bottom = -650.0
rect_min_size = Vector2( 0, 155 )
size_flags_horizontal = 3
script = ExtResource( 3 )
train_label = NodePath("VBoxContainer/HBoxContainer2/Label")
control_container = NodePath("VBoxContainer/HBoxContainer")
hub_controls = NodePath("VBoxContainer/HubControl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 199.0
margin_bottom = 116.0
rect_min_size = Vector2( 0, 44 )
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 199.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 71.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
text = "train_name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="VBoxContainer/HBoxContainer2"]
margin_left = 75.0
margin_right = 131.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="RemoveButton" type="Button" parent="VBoxContainer/HBoxContainer2"]
margin_left = 135.0
margin_right = 199.0
margin_bottom = 20.0
text = "Remove"

[node name="HubControl" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_right = 199.0
margin_bottom = 92.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 96.0
margin_right = 199.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="change_heading_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 28.0
margin_bottom = 20.0
hint_tooltip = "Change direction"
text = "<>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stop_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 32.0
margin_right = 58.0
margin_bottom = 20.0
hint_tooltip = "Stop train"
toggle_mode = true
pressed = true
text = "||"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slow_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 62.0
margin_right = 82.0
margin_bottom = 20.0
hint_tooltip = "Slow speed"
toggle_mode = true
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 86.0
margin_right = 114.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
hint_tooltip = "Cruise speed"
toggle_mode = true
text = ">>"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fast_button" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 154.0
margin_bottom = 20.0
hint_tooltip = "Fast speed"
toggle_mode = true
text = ">>>"

[node name="HSeparator" type="HSeparator" parent="."]
margin_top = 120.0
margin_right = 199.0
margin_bottom = 124.0

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/change_heading_button" to="." method="_on_change_heading_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/stop_button" to="." method="_on_stop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/slow_button" to="." method="_on_slow_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/fast_button" to="." method="_on_fast_button_pressed"]
